# ai

./: README.md  pyproject.toml  tenorflow.ipynb
ai/: main.py
