[tool.poetry]
name = "ai"
version = "0.1.0"
description = ""
authors = ["Marco Manduca <marco.manduca95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "^1.26.2"
pandas = "^2.1.4"
pyarrow = "^15.0.0"
matplotlib = "^3.8.2"
seaborn = "^0.13.2"
scipy = "^1.11.4"
scikit-learn = "^1.4.0"
keras = "^3.2.0"
xgboost = "^2.0.3"
torch = "^2.1.1"
torchvision = "^0.16.1"
tensorflow = "^2.16.1"
notebook = "^7.0.6"
jupyter = "^1.0.0"
docker = "^7.0.0"
kubernetes = "^28.1.0"
kaggle = "^1.6.6"
google-cloud-storage = "^2.16.0"
google-cloud-api-keys = "^0.5.9"
google-api-python-client = "^2.124.0"
oauth2client = "^4.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
