[tool.poetry]
name = "ai"
version = "0.1.0"
description = ""
authors = ["Marco Manduca <marco.manduca95@gmail.com>", "Marco Manduca <manducamarco@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "^1.26.2"
pandas = "^2.1.4"
pyarrow = "^15.0.0"
matplotlib = "^3.8.2"
seaborn = "^0.13.2"
scipy = "^1.11.4"
scikit-learn = "^1.4.0"
keras = "^3.2.0"
xgboost = "^2.0.3"
torch = "^2.1.1"
torchvision = "^0.16.1"
tensorflow = "^2.16.1"
notebook = "^7.0.6"
jupyter = "^1.0.0"
docker = "^7.0.0"
kubernetes = "^28.1.0"
pymongo = "^4.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
